<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/bg_background_auth" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_carrot_logo"
            android:layout_gravity="center"/>

    </FrameLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loging"
            android:textColor="@color/black"
            android:textSize="24sp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_details"
            android:textColor="@color/common_google_signin_btn_text_light"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:paddingBottom="16dp"
            />



        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emails"
            android:layout_marginTop="16dp"
            android:textColor="@color/label_color"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="start"
            app:placeholderText="e.g.   johnsmith123@gmail.com"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/Edit_Common"
                android:layout_width="match_parent"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:textColorHint="@color/homeneartext"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/password"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:textColor="@color/label_color" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="start"
            app:errorEnabled="false"
            app:hintAnimationEnabled="false"
            app:placeholderText="e.g. . . . . . . . . . . ."
            app:hintEnabled="false"
            app:passwordToggleDrawable="@drawable/ic_password_toggle"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPasswordLogin"
                style="@style/Edit_Common"
                android:layout_width="match_parent"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:paddingTop="14dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:paddingBottom="14dp"
                android:textColorHint="@color/homeneartext"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:gravity="end"
            app:fontFamily="@font/opensans_medium"
            android:layout_marginTop="4dp"
            android:textColor="@color/black_text"
            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="18dp"
            android:backgroundTint="@color/app_color"
            android:gravity="center"
            android:padding="18dp"
            android:text="@string/log_in"
            android:textSize="14sp"
            app:cornerRadius="14dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>




    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fontFamily="@font/opensans_medium"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/black_text"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:fontFamily="@font/opensans_medium"
            android:textColor="@color/app_color"
            android:layout_marginStart="4dp"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>














