<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/bg_background_auth" />


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:padding="14dp"
            app:srcCompat="@drawable/ic_left" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="14dp"
            android:text="@string/enter_your_4_digit_code"
            android:textColor="@color/black"
            android:textSize="22sp" />

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="14dp"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/code"
            android:textColor="@color/label_color" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layPhoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/no"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/black"
            app:placeholderText="@string/hint"
            app:hintTextColor="@color/black"
            app:placeholderTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="phone"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-1dp"
            android:orientation="horizontal"
            android:padding="18dp"
            android:paddingBottom="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="24dp"
                android:layout_weight="1"
                android:text="@string/resend_code"
                android:textColor="@color/app_color" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="44dp"
                android:backgroundTint="@color/app_color"
                android:contentDescription="@string/project_id"
                android:src="@drawable/ic_right"
                app:tint="@color/white"
                app:useCompatPadding="true" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </RelativeLayout>


</androidx.appcompat.widget.LinearLayoutCompat>




