<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/itemLayout"
    android:layout_width="165dp"
    android:layout_height="220dp"
    android:layout_marginVertical="3dp"
    android:layout_marginStart="20dp"
    app:cardCornerRadius="18dp"
    app:cardElevation="2dp"
    app:rippleColor="@color/green">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivGroceryImage"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/img_banana"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGroceryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:text="@string/organic_bananas"
            android:textColor="@color/textColorBlackBold"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto"
            app:layout_constraintTop_toBottomOf="@id/ivGroceryImage" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvItemQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="1dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/_7pcs_price"
            android:textColor="@color/dark_gray"
            app:layout_constraintTop_toBottomOf="@id/tvGroceryName" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvItemPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/_36_4_99"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/textColorBlackBold"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_bg_round_btn"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="@id/tvItemPrice"
            app:layout_constraintCircleRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvItemPrice"
            app:layout_constraintVertical_bias="0.545" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>







