<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/bg_background_auth"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_carrot_logo"
            android:layout_gravity="center"/>

    </FrameLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credential"
            android:textColor="@color/common_google_signin_btn_text_light"
            android:textSize="14sp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Username"
            android:layout_marginTop="6dp"
            android:textColor="@color/label_color"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/layoutNameInput"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="start"
            app:errorEnabled="false"
            app:hintAnimationEnabled="false"
            app:placeholderText="e.g. John Smith"
            app:hintEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserName"
                style="@style/Edit_Common"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:paddingStart="0dp"
                android:inputType="textEmailAddress"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:textColorHint="@color/black"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            android:layout_marginTop="8dp"
            android:textColor="@color/label_color"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/layoutEmailInput"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="start"
            app:placeholderText="e.g. johnsmith123@gmail.com"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/Edit_Common"
                android:layout_width="match_parent"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:paddingStart="0dp"
                android:textColorHint="@color/homeneartext"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/password"
            android:textColor="@color/label_color" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="start"
            app:errorEnabled="false"
            app:hintAnimationEnabled="false"
            app:placeholderText="e.g. ..........."
            app:hintEnabled="false"
            app:passwordToggleDrawable="@drawable/ic_password_toggle"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPasswordLogin"
                style="@style/Edit_Common"
                android:layout_width="match_parent"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:paddingTop="14dp"
                android:paddingStart="0dp"
                android:paddingBottom="14dp"
                android:textColorHint="@color/homeneartext"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/termscondition"
            android:layout_marginTop="4dp"
            android:textColor="@color/common_google_signin_btn_text_light"
            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/app_color"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/sign_up"
            android:textSize="14sp"
            app:cornerRadius="14dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already"
            android:textColor="@color/black_text"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/app_color"
            android:layout_marginStart="4dp"
            android:textStyle="bold"/>
</androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>